src/stylesheets/main.scss
@import "./custom-bootstrap";

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-smooth: 10em;
}

#root,
body {
  width: 100%;
}

body {
  font-family: "Open Sans", sans-serif;
}

.bg-dark-primary {
  background-color: #4c2a54;
}

.img-fit-cover {
  object-fit: cover;
}

.section {
  background-image: url(../media/bg_sprinkle.svg);
  background-attachment: fixed;
}

.technologies-bg {
  background-image: url(../media/bg_guy_reading.svg),
    linear-gradient(#d0c8ef, #7b4289);
  background-repeat: no-repeat;
  background-position: right bottom;
  background-attachment: fixed;
}

.about-me {
  background-image: url(../media/bg_purple_blurred_computer.jpg);
  background-size: cover;
}

.border-radius-1 {
  border-radius: 0.5em;
}

.my-bg-gradient {
  background-image: linear-gradient(99.34deg, #7b4289 0%, #2e406f 100%);
}

.box-shadow-1 {
  box-shadow: 5px 5px 3px 5px rgba(0, 0, 0, 0.4);
}

.introBanner {
  height: 14em;
  background-image: url(../media/bg_purple_computer.png);
  background-size: cover;
}

.learn-more-btn {
  color: $primary;
  align-content: center;
}

.show-more-btn {
  color: $primary;
  font-weight: bold;
  border-radius: 0.3em;
}

.lm-btn-darrow {
  background-color: $primary;
  mask-image: url(../media/icon_down_arrow.svg);
  mask-mode: alpha;
  mask-size: 100%;

  display: inline-block;
  width: 2em;
  height: 2em;
}

.introContent {
  margin-top: 5vh;
}

.introPic {
  width: 17em;
}

.h-100vh-res {
  height: 100vh;
}

.w-25em {
  width: 35em;
}

.text-stroke {
  text-shadow: 3px 0 0 #fafafa, -3px 0 0 #fafafa, 0 3px 0 #fafafa,
    0 -3px 0 #fafafa, 3px 3px #fafafa, -3px -3px 0 #fafafa, 3px -3px 0 #fafafa,
    -3px 3px 0 #fafafa;
}

.circle-mask {
  mask: url(../media/mask_circle.svg);
  mask-size: 100%;
}

@media (max-width: map-get($grid-breakpoints, "sm")) {
  .h-100vh-res {
    height: 120vh;
  }

  .w-25em {
    width: 100%;
  }
}

